[package]
name = "na"
version = "0.16.3"
authors = ["arturo castro <arturo@openframeworks.cc>"]
description = "na is a wrapper around nalgebra to make it easier and mostly less verbose to work with the most used types in vector math for graphics."
homepage = "http://github.com/arturoc/na"
repository = "http://github.com/arturoc/na"
license = "BSD-3-Clause"

[dependencies]
nalgebra = "0.16.4"
alga = "0.7"
num-traits = "0.2"

[features]
unstable=[]
