[package]
name = "na"
version = "0.17.0"
authors = ["arturo castro <arturo@openframeworks.cc>"]
description = "na is a wrapper around nalgebra to make it easier and mostly less verbose to work with the most used types in vector math for graphics."
homepage = "http://github.com/arturoc/na"
repository = "http://github.com/arturoc/na"
license = "BSD-3-Clause"

[dependencies]
nalgebra = "0.17"
alga = "0.8"
num-traits = "0.2"

[features]
unstable=[]
serde-serialize = ["nalgebra/serde-serialize"]
