[package]
name = "na"
version = "0.32.0"
authors = ["arturo castro <arturo@openframeworks.cc>"]
description = "na is a wrapper around nalgebra to make it easier and mostly less verbose to work with the most used types in vector math for graphics."
homepage = "http://github.com/arturoc/na"
repository = "http://github.com/arturoc/na"
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
nalgebra = "0.32"
num-traits = "0.2"
simba = "0.8"

[features]
unstable=[]
alga = ["nalgebra/alga"]
wide = ["simba/wide"]
packed_simd = ["simba/packed_simd"]

serde-serialize = ["nalgebra/serde-serialize"]
